tests/Jroc.Test262.Tests/built-ins/Error/JavaScript/prototype/no-error-data.js
Object.defineProperty(Error.prototype, Symbol.toStringTag, {
  value: null,
});

assert.sameValue(
  Object.prototype.toString.call(Error.prototype),
  "[object Object]"
);

